--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
         "psr-4": { "App\\": "app/" }
     },
     "require": {
-        "symfony/console": "^3.2"
+        "symfony/console": "^3.2",
+        "symfony/dependency-injection": "^3.2",
+        "symfony/config": "^3.2"
     }
 }
